# stealer-parser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
docs/: grammar_passwords.txt  grammar_system.txt
stealer_parser/: __init__.py  __main__.py  helpers.py  main.py  processing.py  search_stealer_credits.py
stealer_parser/models/: __init__.py  archive_wrapper.py  credential.py  leak.py  system.py  types.py
stealer_parser/parsing/: __init__.py  lexer_passwords.py  lexer_system.py  parser.py  parsing_passwords.py  parsing_system.py
